# Data-Engineering-Code-Challenge

./: .gitignore  Dockerfile  Makefile  README.md  SOLUTION.md  docker-compose.yaml  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml
data/landing_layer/: products_uuid.csv  sales_uuid.csv  stores_uuid.csv
spark_jobs/: data_export.py  data_preparation.py  data_transformation.py
spark_jobs/schemas/products/: bronze_layer.py  gold_layer.py  landing_layer.py  silver_layer.py
spark_jobs/schemas/sales/: bronze_layer.py  gold_layer.py  landing_layer.py  silver_layer.py
spark_jobs/schemas/stores/: bronze_layer.py  gold_layer.py  landing_layer.py  silver_layer.py
spark_jobs/utils/: dataframes.py  dates.py  delta_lake.py  spark_helper.py  udfs.py
spark_jobs/validations/: data_validation.py  utils.py  validations.py
spark_jobs/validations/products/: validations.yaml
spark_jobs/validations/sales/: validations.yaml
spark_jobs/validations/stores/: validations.yaml
tests/: conftest.py
tests/unit/: conftest.py  test_dates.py  test_udfs.py  test_validations.py
